   TRIVIAL-GARBAGE failed to build in Windows

 - The MSVC port did not define @ECL_LDRPATH@ and failed to build ecl.dll

 - The sequence functions did not understand the newest specialized array types.

* Visible changes:

 - The configuration flag --with-__thread now defaults to NO because many
   platforms do not support it and GCC does not complain, making reliable
   detection impossible.

ECL 9.8.3:
==========

* Bugs fixed:

 - FLOAT-SIGN ignored the second argument.

ECL 9.8.2:
==========

* Bugs fixed:

 - The C inline expansion for sin, cos, and tan were wrong due to three
   recently introduced typos.

 - The C inline form of SQRT did not work when ECL was built with
   --enable-longdouble.

 - When building FASL files, the output file name was not surrounded by
   double quotes, thus breaking when the file name had spaces (only
   mingw32).

* Visible changes:

 - A new configuration flag, --enable-rpath, allows hardcoding in ECL the
   location of its shared library. This is not needed in Windows, it should
   work on all supported platforms and its purpose is to simplify the
   installation of ECL in nonstandard locations.


ECL 9.8.1:
==========

* Important notes:

 - The GMP library had to be patched to build with latest versions of GCC.
   Since our patch only covers the main header and there might be some corners
   left, it is recommended to build ECL against a better maintained version of
   the library, such as MPIR or the versions supplied by your operating system.

 - ECL now builds properly on a large number of platforms, including Windows
   with and without Microsoft compilers. However, not always are all the
   configuration options available or well supported. The fault is not always
   ECL's, but also the libraries it depends on. Some of these problems are
   detailed below, some are to be found. As a guide, the minimally supported
   flags for each platform are those use for the automated testing process