@@ -1173,29 +1173,29 @@ also known as unix-domain sockets."))
 	    "si_set_buffering_mode(ecl_make_stream_from_fd(#0,#1,(enum ecl_smmode)#2,8,ECL_STREAM_DEFAULT_FORMAT,Cnil), #3)"
 	    :one-liner t))
 
-(defmethod socket-make-stream ((socket socket)  &rest args &key (buffering-mode NIL))
+(defmethod socket-make-stream ((socket socket)  &rest args &key (buffering :full))
   (declare (ignore args))
   (let ((stream (and (slot-boundp socket 'stream)
 		     (slot-value socket 'stream))))
     (unless stream
       (setf stream (let ((fd (socket-file-descriptor socket)))
 		     (make-stream-from-fd fd #-:wsock :input-output #+:wsock :input-output-wsock
-					  buffering-mode)))
+					  buffering)))
       (setf (slot-value socket 'stream) stream)
       #+ ignore
       (sb-ext:cancel-finalization socket))
     stream))
 
 #+:wsock
-(defmethod socket-make-stream ((socket named-pipe-socket) &rest args &key (buffering-mode NIL))
+(defmethod socket-make-stream ((socket named-pipe-socket) &rest args &key (buffering :full))
   (declare (ignore args))
   (let ((stream (and (slot-boundp socket 'stream)
 		     (slot-value socket 'stream))))
     (unless stream
       (setf stream
 	    (let* ((fd (socket-file-descriptor socket))
-		   (in (make-stream-from-fd fd :smm-input buffering-mode))
-		   (out (make-stream-from-fd fd :smm-output buffering-mode)))
+		   (in (make-stream-from-fd fd :smm-input buffering))
+		   (out (make-stream-from-fd fd :smm-output buffering)))
 	      (make-two-way-stream in out)))
       (setf (slot-value socket 'stream) stream)
       #+ ignore
@@ -1519,3 +1519,4 @@ GET-NAME-SERVICE-ERRNO")
 
 ;; Finished loading
 (provide 'sockets)
+(provide 'sb-bsd-sockets)
