@@ -1630,8 +1630,11 @@ cl_symbols[] = {
 {SYS_ "*ACTION-ON-UNDEFINED-VARIABLE*", SI_SPECIAL, NULL, -1, Cnil},
 
 {SYS_ "SET-BUFFERING-MODE", SI_ORDINARY, si_set_buffering_mode, 2, OBJNULL},
+{KEY_ "NONE", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "LINE-BUFFERED", KEYWORD, NULL, -1, OBJNULL},
 {KEY_ "FULLY-BUFFERED", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "LINE", KEYWORD, NULL, -1, OBJNULL},
+{KEY_ "FULL", KEYWORD, NULL, -1, OBJNULL},
 
 {SYS_ "CMP-ENV-REGISTER-MACROLET", SI_ORDINARY, NULL, -1, OBJNULL},
 
