@@ -1630,8 +1630,11 @@ cl_symbols[] = {
 {SYS_ "*ACTION-ON-UNDEFINED-VARIABLE*",NULL},
 
 {SYS_ "SET-BUFFERING-MODE","si_set_buffering_mode"},
+{KEY_ "NONE",NULL},
 {KEY_ "LINE-BUFFERED",NULL},
 {KEY_ "FULLY-BUFFERED",NULL},
+{KEY_ "LINE",NULL},
+{KEY_ "FULL",NULL},
 
 {SYS_ "CMP-ENV-REGISTER-MACROLET",NULL},
 
